--- a/app.json
+++ b/app.json
@@ -10,6 +10,13 @@
     "navigationBarBackgroundColor": "#962F30",
     "navigationBarTitleText": "江西师范大学第二课堂",
     "navigationBarTextStyle": "white"
+  },
+  "debug": true,
+  "networkTimeout": {
+    "request": 10000,
+    "connectSocket": 10000,
+    "uploadFile": 10000,
+    "downloadFile": 10000
   }
   
 }
