个人页准备

--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
   "pages": [
-    "pages/index/index",
     "pages/login/login",
+    "pages/index/index",
     "pages/logs/logs",
-    "pages/user/user",
+    "pages/my/my",
     "pages/search/search",
     "pages/activity/activity",
     "pages/core/kb/kb",
@@ -24,9 +24,11 @@
   ],
   "window": {
     "backgroundTextStyle": "light",
+    "backgroundColor": "#962F30",
     "navigationBarBackgroundColor": "#962F30",
     "navigationBarTitleText": "江西师范大学第二课堂",
-    "navigationBarTextStyle": "white"
+    "navigationBarTextStyle": "white",
+    "enablePullDownRefresh": true
   },
   "tabBar": {
     "color": "#7A7E83",
@@ -54,7 +56,7 @@
         "selectedIconPath": "images/tab/search_selected.png"
       },
       {
-        "pagePath": "pages/user/user",
+        "pagePath": "pages/my/my",
         "text": "我的",
         "iconPath": "images/tab/my.png",
         "selectedIconPath": "images/tab/my_selected.png"
