个人页面主体完成

--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "pages": [
+    "pages/tab/my/my",
     "pages/login/login",
-    "pages/index/index",
+    "pages/tab/index/index",
+    "pages/tab/search/search",
+    "pages/tab/activity/activity",
     "pages/logs/logs",
-    "pages/my/my",
-    "pages/search/search",
-    "pages/activity/activity",
     "pages/core/kb/kb",
     "pages/core/cj/cj",
     "pages/core/ks/ks",
@@ -38,25 +38,25 @@
     "position": "bottom",
     "list": [
       {
-        "pagePath": "pages/index/index",
+        "pagePath": "pages/tab/index/index",
         "text": "首页",
         "iconPath": "images/tab/index.png",
         "selectedIconPath": "images/tab/index_selected.png"
       },
       {
-        "pagePath": "pages/activity/activity",
+        "pagePath": "pages/tab/activity/activity",
         "text": "活动",
         "iconPath": "images/tab/activity.png",
         "selectedIconPath": "images/tab/activity_selected.png"
       },
       {
-        "pagePath": "pages/search/search",
+        "pagePath": "pages/tab/search/search",
         "text": "搜索",
         "iconPath": "images/tab/search.png",
         "selectedIconPath": "images/tab/search_selected.png"
       },
       {
-        "pagePath": "pages/my/my",
+        "pagePath": "pages/tab/my/my",
         "text": "我的",
         "iconPath": "images/tab/my.png",
         "selectedIconPath": "images/tab/my_selected.png"
