添加weui样式文件，个人资料编辑页

--- a/app.json
+++ b/app.json
@@ -20,7 +20,8 @@
     "pages/core/bx/bx_detail",
     "pages/core/cet/cet",
     "pages/core/cet/result",
-    "pages/core/fw/fw"
+    "pages/core/fw/fw",
+    "pages/tab/my/editInfo/editInfo"
   ],
   "window": {
     "backgroundTextStyle": "light",
