--- a/app.json
+++ b/app.json
@@ -24,7 +24,9 @@
     "pages/tab/my/editInfo/editInfo",
     "pages/tab/my/message/message",
     "pages/tab/my/setting/setting",
-    "pages/tab/my/contact_us/contact_us"
+    "pages/tab/my/contact_us/contact_us",
+    "pages/tab/search/byActivity",
+    "pages/tab/search/byUser"
   ],
   "window": {
     "backgroundTextStyle": "light",
