添加用户搜索UI

--- a/app.json
+++ b/app.json
@@ -25,8 +25,7 @@
     "pages/tab/my/message/message",
     "pages/tab/my/setting/setting",
     "pages/tab/my/contact_us/contact_us",
-    "pages/tab/search/byActivity",
-    "pages/tab/search/byUser"
+    "pages/tab/search/searchResult/searchResult"
   ],
   "window": {
     "backgroundTextStyle": "light",
