删除一些无用文件

--- a/app.json
+++ b/app.json
@@ -1,31 +1,17 @@
 {
   "pages": [
-    "pages/tab/search/search",
-    "pages/tab/my/my",
-    "pages/login/login",
-    "pages/tab/index/index",
     "pages/tab/activity/activity",
-    "pages/logs/logs",
-    "pages/core/kb/kb",
-    "pages/core/cj/cj",
-    "pages/core/ks/ks",
-    "pages/core/kjs/kjs",
-    "pages/core/xs/xs",
-    "pages/core/ykt/ykt",
-    "pages/core/jy/jy",
-    "pages/core/xf/xf",
-    "pages/core/sdf/sdf",
-    "pages/core/bx/bx",
-    "pages/core/bx/bx_apply",
-    "pages/core/bx/bx_detail",
-    "pages/core/cet/cet",
-    "pages/core/cet/result",
-    "pages/core/fw/fw",
+    "pages/tab/activity/declaration/declaration",
+    "pages/tab/search/search",
+    "pages/tab/search/searchResult/searchResult",
+    "pages/tab/my/my",
     "pages/tab/my/editInfo/editInfo",
     "pages/tab/my/message/message",
     "pages/tab/my/setting/setting",
     "pages/tab/my/contact_us/contact_us",
-    "pages/tab/search/searchResult/searchResult"
+    "pages/tab/index/index",
+    "pages/login/login",
+    "pages/logs/logs"
   ],
   "window": {
     "backgroundTextStyle": "light",
